@@ -6,7 +6,7 @@ PKG_IS_ADDON="yes"
 PKG_ADDON_NAME="Thoradia Add-ons"
 PKG_ADDON_TYPE="thoradia.service"
 PKG_MAINTAINER="thoradia"
-PKG_REV="6"
+PKG_REV="7"
 PKG_SHORTDESC="$PKG_ADDON_NAME: add-on repository"
 PKG_LONGDESC="$PKG_ADDON_NAME ($PKG_REV) add-on repository, provides CouchPotato, Deluge, Headphones, Jackett, NZBGet, qBittorent, Radarr, SABnzbd, SickRage, Sonarr and Transmission."
 PKG_DISCLAIMER="Keep it legal and carry on"
